--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,71 @@
-fastapi
-uvicorn
-newspaper3k
-newspaper
-lxml_html_clean
-requests
-dotenv
-pydantic
-typing
-langchain
-langchain_core
-langchain_google_genai
+annotated-types==0.7.0
+anyio==4.9.0
+beautifulsoup4==4.13.4
+cachetools==5.5.2
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+cssselect==1.3.0
+dotenv==0.9.9
+fastapi==0.116.1
+feedfinder2==0.0.4
+feedparser==6.0.11
+filelock==3.18.0
+filetype==1.2.0
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.74.0
+grpcio-status==1.74.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jieba3k==0.35.1
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-google-genai==2.1.8
+langchain-text-splitters==0.3.9
+langsmith==0.4.8
+lxml==6.0.0
+lxml_html_clean==0.4.2
+newspaper3k==0.2.8
+nltk==3.9.1
+orjson==3.11.1
+packaging==25.0
+pillow==11.3.0
+proto-plus==1.26.1
+protobuf==6.31.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+requests-file==2.1.0
+requests-toolbelt==1.0.0
+rsa==4.9.1
+sgmllib3k==1.0.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
+starlette==0.47.2
+tenacity==9.1.2
+tinysegmenter==0.3
+tldextract==5.3.0
+tqdm==4.67.1
+typing_extensions==4.14.1
+typing-inspection==0.4.1
+urllib3==2.5.0
+uvicorn==0.35.0
+zstandard==0.23.0
